@@ -3,7 +3,11 @@ package de.melanx.skyblockbuilder.template;
 import de.melanx.skyblockbuilder.SkyblockBuilder;
 import de.melanx.skyblockbuilder.config.common.DimensionsConfig;
 import de.melanx.skyblockbuilder.config.common.TemplatesConfig;
+import de.melanx.skyblockbuilder.config.values.providers.SpawnsProvider;
+import de.melanx.skyblockbuilder.config.values.providers.SpreadsProvider;
+import de.melanx.skyblockbuilder.config.values.providers.SurroundingBlocksProvider;
 import de.melanx.skyblockbuilder.util.SkyPaths;
+import net.minecraft.world.level.levelgen.structure.templatesystem.LiquidSettings;
 import net.minecraft.world.level.levelgen.structure.templatesystem.StructurePlaceSettings;
 import net.minecraft.world.level.levelgen.structure.templatesystem.StructureTemplate;
 
@@ -13,7 +17,7 @@ import java.util.*;
 
 public class TemplateLoader {
 
-    public static final StructurePlaceSettings STRUCTURE_PLACE_SETTINGS = new StructurePlaceSettings().setKnownShape(true).setKeepLiquids(false);
+    public static final StructurePlaceSettings STRUCTURE_PLACE_SETTINGS = new StructurePlaceSettings().setKnownShape(true).setLiquidSettings(LiquidSettings.IGNORE_WATERLOGGING);
     private static final List<String> TEMPLATE_NAMES = new ArrayList<>();
     private static final Map<String, ConfiguredTemplate> TEMPLATE_MAP = new HashMap<>();
     private static ConfiguredTemplate TEMPLATE;
@@ -28,15 +32,19 @@ public class TemplateLoader {
             Set<String> takenNames = new HashSet<>();
 
             for (TemplateInfo info : TemplatesConfig.templates) {
-                if (!TemplatesConfig.spawns.containsKey(info.spawns())) {
-                    throw new IllegalArgumentException("Spawn configuration \"" + info.spawns() + "\" is not defined: " + info.name());
+                if (info.spawns() instanceof SpawnsProvider.Reference(String name) && !TemplatesConfig.spawns.containsKey(name)) {
+                    throw new IllegalArgumentException("Spawns configuration \"" + info.spawns() + "\" is not defined: " + info.name());
                 }
 
-                if (!TemplatesConfig.surroundingBlocks.containsKey(info.surroundingBlocks()) && !info.surroundingBlocks().isEmpty()) {
+                if (info.spawns().templateSpawns().allEmpty()) {
+                    throw new IllegalArgumentException("Spawns configuration \"" + info.spawns() + "\" is empty: " + info.name());
+                }
+
+                if (info.surroundingBlocks() instanceof SurroundingBlocksProvider.Reference(String name) && !TemplatesConfig.surroundingBlocks.containsKey(name)) {
                     throw new IllegalArgumentException("Surrounding blocks configuration \"" + info.surroundingBlocks() + "\" is not defined: " + info.name());
                 }
 
-                if (!TemplatesConfig.spreads.containsKey(info.spreads()) && !info.spreads().isEmpty()) {
+                if (info.spreads() instanceof SpreadsProvider.Reference(String name) && !TemplatesConfig.spreads.containsKey(name)) {
                     throw new IllegalArgumentException("Spreads configuration \"" + info.spreads() + "\" is not defined: " + info.name());
                 }
 
@@ -60,7 +68,7 @@ public class TemplateLoader {
             }
 
             if (TEMPLATE == null) {
-                TEMPLATE = TEMPLATE_MAP.get(TEMPLATE_NAMES.get(0).toLowerCase(Locale.ROOT));
+                TEMPLATE = TEMPLATE_MAP.get(TEMPLATE_NAMES.getFirst().toLowerCase(Locale.ROOT));
             } else {
                 TEMPLATE = TemplateLoader.getConfiguredTemplate(TEMPLATE.getName());
             }
